# Systemy

./: .gitignore  INSTALL  Makefile  Makefile.am  Makefile.in  Pola  README  config.h  config.status  configure  configure.ac  main.cpp  prostokat.cpp  prostokat.h  prostopadloscian.cpp  prostopadloscian.h
